# quickcapture-egui

./: .gitignore  Cargo.toml  README.md  index.html
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/app/: crop_lib.rs  crop_utils.rs  hotkeys_utils.rs  image_utils.rs  lib.rs  painting_utils.rs  pathlib.rs  save_utils.rs  screenshot_utils.rs  screenshot_view.rs
src/components/: hidden_window.rs  initial_window.rs  mod.rs
