[package]
name = "quickcapture"
version = "0.1.0"
authors = ["Francesco Paolo Carmone <francescopaolocarmone@gmail.com>", "Daniele De Rossi <daniele.dr00@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]

screenshots = "0.8.4"
# screenshots = "0.6.0" # sometimes this gives less troubles

image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
imageproc = "0.23.0"

egui = "0.23.0"
epaint = "0.23.0"   # egui paint module
eframe = { version = "0.23.0", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
log = "0.4"
chrono = "0.4.1"

# Used for images https://docs.rs/egui/latest/egui/load/index.html
egui_extras = { version = "0.23.0", features = ["all_loaders"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
